# Allegro-Records-Offers

./: Makefile  README.md  package-lock.json  test.py
application/: .env.example  .gitignore  Dockerfile.api  Dockerfile.vueapp  compose.yml  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  test_scripts.py  vite.config.js
application/api/: database.py  main.py  models.py
application/model/: allegro_api.py  azure_api.py  discogs_api.py  imageKit_api.py  preprocessing_data.py
application/scripts/: allegro_api.py  azure_api.py  chunks.py  discogs_api.py  imageKit_api.py  plots.py  preprocessing_data.py  preprocessing_image.py  settings.py
application/src/: App.vue  main.js  messages.js
application/src/assets/: main.scss
application/src/components/: TheAlert.vue  TheEdItMany.vue  TheEditDescription.vue  TheEditImages.vue  TheEditSpecific.vue  TheFailed.vue  TheHeader.vue  TheListingData.vue  TheRenew.vue  TheSlider.vue
application/src/components/Edit/: TheEdItMany.vue  TheEditDescription.vue  TheEditImages.vue  TheEditMany.vue  TheEditSpecific.vue  TheSwap.vue
application/src/components/Global/: TheAlert.vue  TheHeader.vue  TheNavBar.vue  TheSlider.vue
application/src/components/Listing/: TheFailed.vue  TheListingData.vue  TheListingHistory.vue  TheListingOptions.vue
application/src/components/Orders/: TheOrders.vue
application/src/router/: index.js
application/src/views/: AllegroCredntialsView.vue  EditView.vue  ListingView.vue  StatsView.vue  WelcomeView.vue
docs/: allegro-api.md  architecture.md  (+10 more)
(+3 files in other folders)
